feat: 实现保持物品栏即时重生功能
- 添加玩家死亡事件监听器
- 检查是否保持物品栏和即时重生游戏规则
- 如果满足条件，在1tick后强制重生玩家

build: 更新构建配置

- 移除-SNAPSHOT版本后缀
- 添加阿里云Maven仓库

--- a/build.gradle
+++ b/build.gradle
@@ -4,9 +4,15 @@ plugins {
 }
 
 group = 'ink.magma'
-version = '1.0-SNAPSHOT'
+version = '1.0.0'
 
 repositories {
+    maven {
+        url 'https://maven.aliyun.com/repository/public/'
+    }
+    maven {
+        url 'https://maven.aliyun.com/repository/central'
+    }
     mavenCentral()
     maven {
         name = "spigotmc-repo"
