--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: KeepInventoryImmediateRespawn
-version: '1.0-SNAPSHOT'
+version: '1.0.1'
 main: ink.magma.keepInventoryImmediateRespawn.KeepInventoryImmediateRespawn
 api-version: '1.21'
 authors: [ Magma ]
